[project]
name = "ebop_maven"
version = "0.0.1"
description = "EBOP Model Automatic input Value Estimation Neural network"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pathlib",
    "scipy",
    "matplotlib",
    "astropy>=5.1",
    "lightkurve>=2.4",
    "numba",
    "scikit-learn>=1.0",
    "ipykernel",
    "ipympl",
    "jupyter",
    "tensorflow>=2.6.0",
    "keras>=2.6.0"
]

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
