[project]
name = "ebop_maven"
version = "0.1.1"
description = "EBOP Model Automatic input Value Estimation Neural network"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy<2.0",
    "pathlib",
    "uncertainties",
    "tensorflow>=2.17",
    "tensorflow-estimator",
    "keras>=3.4",
    "keras-preprocessing"
]

[build-system]
# setuptools-scm is needed for this to pick up data folders held in repo
# along with include-package-data = true
requires = ["setuptools >= 61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ebop_maven"]
include-package-data = true
